--- a/server/docflow/pom.xml
+++ b/server/docflow/pom.xml
@@ -17,27 +17,32 @@
     <description/>
 
     <dependencies>
-<!--        <dependency>
+        <dependency>
             <groupId>com.mg.server</groupId>
             <artifactId>framework</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.mg.server</groupId>
             <artifactId>core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.mg.server</groupId>
             <artifactId>baiengine</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mg.server</groupId>
-            <artifactId>reference</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.mg.server</groupId>
             <artifactId>documentcore</artifactId>
-        </dependency>-->
-<!--
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mg.server</groupId>
+            <artifactId>reference</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>jboss</groupId>
             <artifactId>jboss-system</artifactId>
@@ -48,19 +53,5 @@
             <artifactId>jboss-jmx</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>jboss</groupId>
-            <artifactId>jboss-annotations-ejb3</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>-->
     </dependencies>
 </project>
